--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 			<p class="Autor"> By Pravin Patil</p>
 		</div>
 			<div class="Price">
-				<p>Rs. 450</p>
+				<div> Rs. 450</div>
 			</div>
 		</div>
 
@@ -33,7 +33,7 @@
 			<p class="Autor"> By Mayur Patil</p>
 		</div>
 			<div class="Price">
-				<p>Rs. 320</p>
+				<div> Rs. 320</div>
 			</div>
 		</div>
 
@@ -44,7 +44,7 @@
 			<p class="Autor">By Yogesh Patil</p>
 		</div>
 			<div class="Price">
-				<p>Rs. 450</p>
+				<div> Rs. 450</div>
 			</div>
 		</div>
 	</div>
